@@ -35,6 +35,7 @@ Template for new versions:
 ## Documentation
 
 ## API
+- ``Units::setAutomaticProfessions``: bay12-provided entry point to assign labors based on work details
 
 ## Lua
 
